# Candy-Crush-Canvas2D

./: canvas.cbp  canvas.depend  canvas.layout
Candy Crush/Canvas/: CMakeLists.txt  canvas.cbp  canvas.depend  canvas.layout
Candy Crush/Canvas/src/: Botao.h  main.cpp
src/: auxiliar.h  main.cpp
